2010-04-03  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Clean up useless log information.

2010-03-31  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Fixing bug in storing registry, now memory-wise optimized.
	* include/dlvhex/Interpretation.hpp: Likewise.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* src/dlvhex/Interpretation.cpp: Likewise.
	* src/dlvhex/Registry.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.
	* testsuite/TestMLPSolver.cpp: Likewise.

2010-03-26  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Hashing the Interpretation.
	* include/dlvhex/Interpretation.hpp: Likewise.
	* src/dlvhex/Interpretation.cpp: Likewise.

	* src/dlvhex/postpross.sh: Adding post-processing script for call-graph output and answer set.

	* include/dlvhex/MLPSolver.hpp: Fixed some printing information for post-processing.

2010-03-25  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* testsuite/TestHexParserModule.cpp: Change examples extension to *.mlp.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Remove parameter in solve(), remove deprecated code, move printing method in the end.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Print log information and call graph in verbose level 2.

2010-03-24  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Adding option --n to restrict the number of answer sets returned.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.
	* testsuite/TestMLPSolver.cpp: Likewise.

2010-03-22  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Adding function to easily print idb.
	* testsuite/TestMLPSolver.cpp: Likewise.
